# dolgi_04_12

./: pyproject.toml
dolzhnik_04_12/: functions.py  main.py
tests/: test_functions.py
