[tool.poetry]
name = "dolzhnik-04-12"
version = "0.1.0"
description = ""
authors = ["dichenk <dchenk@gmail.com>"]
readme = "README.md"
packages = [{include = "dolzhnik_04_12"}]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
